--- a/_sass/_shared.scss
+++ b/_sass/_shared.scss
@@ -29,13 +29,13 @@
     padding-top: 5rem;
   }
   &--with-padding {
-    padding-top: 11rem;
+    padding-top: 12rem;
     padding-bottom: 2rem;
   }
 }
 
 .with-padding {
-  padding-top: 11rem;
+  padding-top: 12rem;
   padding-bottom: 2rem;
 }
 
